--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/router": "10.1.4",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "angular5-social-login": "^1.0.9",
     "bootstrap": "4.5.2",
     "chart.js": "2.9.3",
